fixed responsiveness on tablets

--- a/styles.css
+++ b/styles.css
@@ -189,6 +189,8 @@ select {
     margin: 2px;
 }
 
+/* Responsive styles */
+
 @media screen  and (max-width: 600px) {
     .modal {
         margin-left: 20px;
@@ -214,5 +216,14 @@ select {
 
     .modal-description {
         font-size: 0.9em;
+    }
+}
+
+@media screen and (max-width: 768px) {
+        .modal {
+        margin-left: 60px;
+        margin-top: 20px;
+        width: 80%;
+        max-height: 90vh;
     }
 }
